--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,18 +1,71 @@
-name: deploy website
-on: [pull_request]
+name: example - next.js
+on:
+  push:
+    branches:
+      - master
+      - feature/*
+  pull_request_target:
+
 jobs:
-  deploy:
+  static:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      #  your build commands
-      # - run: |
-      #    ng build --prod
-      - uses: amondnet/vercel-action@v25 #deploy
+      - run: |
+          npm ci
+          npx vercel pull --yes --token=${VERCEL_TOKEN}
+        working-directory: example/nextjs
+        env:
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_NEXTJS }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+      - run: |
+          npx vercel build
+        if: github.event_name == 'pull_request_target'
+        working-directory: example/nextjs
+        env:
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_NEXTJS }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+      - uses: ./
+        id: now-deployment-staging
+        if: github.event_name == 'pull_request_target'
         with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }} # Required
-          github-token: ${{ secrets.GITHUB_TOKEN }} #Optional
-          vercel-args: "--prod" #Optional
-          vercel-org-id: ${{ secrets.ORG_ID}} #Required
-          vercel-project-id: ${{ secrets.PROJECT_ID}} #Required
-          working-directory: ./sub-directory
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID_NEXTJS }}
+          vercel-args: --prebuilt
+          working-directory: example/nextjs
+          alias-domains: |
+            staging.nextjs.vercel-action.amond.dev
+            pr-{{PR_NUMBER}}.nextjs.vercel-action.amond.dev
+      - name: production or not
+        id: prod_or_not
+        run: |
+          if [ "$REF" == 'refs/heads/master' ]
+          then
+              echo "vercel-args=--prod --prebuilt" >> $GITHUB_OUTPUT
+          else
+              echo "vercel-args=--prebuilt" >> $GITHUB_OUTPUT
+          fi
+        env:
+          REF: ${{ github.ref }}
+      - run: |
+          npx vercel build --prod
+        if: github.event_name == 'push'
+        working-directory: example/nextjs
+        env:
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_NEXTJS }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+      - uses: ./
+        id: now-deployment-production
+        if: github.event_name == 'push'
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID_NEXTJS }}
+          vercel-args: ${{ steps.prod_or_not.outputs.vercel-args }}
+          working-directory: example/nextjs
+          alias-domains: |
+            {{BRANCH}}.nextjs.vercel-action.amond.dev
