--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,48 +1,19 @@
-name: example - static
+name: Deploy CI
 on:
   push:
-    branches:
-      - master
-      - feature/*
-  pull_request_target:
-
+    branches: [main]
+  pull_request:
+    types: [opened, synchronize, reopened]
 jobs:
-  static:
+  deploy:
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
-      - uses: actions/checkout@v2
-      - uses: ./
-        id: now-deployment-staging
-        if: github.event_name == 'pull_request_target'
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Deploy to Vercel Action
+        uses: BetaHuhn/deploy-to-vercel-action@v1
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID_STATIC }}
-          working-directory: example/static
-          alias-domains: |
-            staging.static.vercel-action.amond.dev
-            pr-{{PR_NUMBER}}.static.vercel-action.amond.dev
-      - name: production or not
-        id: prod_or_not
-        run: |
-          if [ "$REF" == 'refs/heads/master' ]
-          then
-              echo "vercel-args=--prod" >> $GITHUB_OUTPUT
-          else
-              echo "vercel-args=" >> $GITHUB_OUTPUT
-          fi
-        env:
-          REF: ${{ github.ref }}
-      - uses: ./
-        id: now-deployment-production
-        if: github.event_name == 'push'
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID_STATIC }}
-          vercel-args: ${{ steps.prod_or_not.outputs.vercel-args }}
-          working-directory: example/static
-          alias-domains: |
-            {{BRANCH}}.static.vercel-action.amond.dev
+          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
