--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "axios": "^1.10.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "vercel": "^44.2.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
