--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -11,6 +11,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
+      - name: Clear npm cache
+        run: npm cache clean --force
       - name: Install dependencies
         run: npm ci
       - name: Install Playwright
