--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,10 +40,10 @@ jobs:
             --meta githubRepo=playwright-test \
             --meta githubDeployment=1
       - name: Publish Test Report
-      uses: ctrf-io/github-test-reporter@v1
-      with:
-        report-path: '../../src/tests/images/fullpage.png'
-        pull-request-report: true
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      if: always()
+        uses: ctrf-io/github-test-reporter@v1
+        with:
+          report-path: "../../src/tests/images/fullpage.png"
+          pull-request-report: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        if: always()
