fix: update upload target for webpage screenshot in build image workflow

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -16,6 +16,6 @@ jobs:
       - name: Comment Webpage Screenshot
         uses: saadmk11/comment-webpage-screenshot@main
         with:
-          upload_to: github_branch
+          upload_to: main
           capture_urls: "https://playwright-test-flax.vercel.app, http://localhost:5173"
           github_token: ${{ secrets.GITHUB_TOKEN }}
