--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: 22
       - name: Install dependencies
-        run: npm ci
+        run: pnpm ci
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
       - name: Run Playwright tests
