--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -14,8 +14,12 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 22
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: latest
       - name: Install dependencies
-        run: pnpm ci
+        run: pnpm install
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
       - name: Run Playwright tests
