--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -29,5 +29,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: screenshots
-          path: screenshots/
+          path: src/tests/
           retention-days: 30
