feat: update preview image workflow to trigger on push and pull request for main branch

--- a/.github/workflows/preview-image.yml
+++ b/.github/workflows/preview-image.yml
@@ -1,5 +1,9 @@
 name: Preview with Screenshots
-on: pull_request
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
   test:
