--- a/.github/workflows/preview-image.yml
+++ b/.github/workflows/preview-image.yml
@@ -3,16 +3,14 @@ on:
   pull_request:
 
 jobs:
-  test:
+  post-comment:
     runs-on: ubuntu-latest
-    permissions:
-      pull-requests: write
     steps:
-      - name: Create comment
-        uses: peter-evans/create-or-update-comment@v4
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Comment PR
+        uses: thollander/actions-comment-pull-request@v1
         with:
-          issue-number: 1
-          body: |
-            This is a multi-line test comment
-            - With GitHub **Markdown** :sparkles:
-            - ![image](/src/tests/images/fullpage.png)
+          message: "![image](/src/tests/images/fullpage.png)"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
