--- a/.github/workflows/preview-image.yml
+++ b/.github/workflows/preview-image.yml
@@ -1,6 +1,8 @@
-name: Preview with Screenshots
+name: Comment on Pull Request
+
 on:
   pull_request:
+    types: [opened, reopened]
 
 jobs:
   post-comment:
