feat: enhance PR comment to welcome new contributors and link to contributing guide

--- a/.github/workflows/preview-image.yml
+++ b/.github/workflows/preview-image.yml
@@ -23,5 +23,7 @@ jobs:
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: comment
+              body: `**Welcome**, new contributor!
+
+                Please make sure you've read our [contributing guide](CONTRIBUTING.md) and we look forward to reviewing your Pull request shortly ✨`
             });
