--- a/.github/workflows/preview-image.yml
+++ b/.github/workflows/preview-image.yml
@@ -26,8 +26,7 @@ jobs:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-          CREATE_COMMENT: false
-      - uses: phulsechinmay/rewritable-pr-comment@v0.3.0
+      - uses: BetaHuhn/deploy-to-vercel-action@latest
         if: ${{ steps.vercel-deploy.outputs.DEPLOYMENT_CREATED }}
         with:
           message: |
