--- a/.github/workflows/preview-image.yml
+++ b/.github/workflows/preview-image.yml
@@ -20,14 +20,13 @@ jobs:
         run: npm install -g vercel
       - name: Deploy to Vercel Action
         id: vercel-deploy
-        uses: BetaHuhn/deploy-to-vercel-action@v1
+        uses: BetaHuhn/deploy-to-vercel-action@latest
         with:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-      - uses: BetaHuhn/deploy-to-vercel-action@latest
-        if: ${{ steps.vercel-deploy.outputs.DEPLOYMENT_CREATED }}
+      - uses: phulsechinmay/rewritable-pr-comment@v0.3.0
         with:
           message: |
             This pull request has been deployed to Vercel.
