--- a/.github/workflows/preview-image.yml
+++ b/.github/workflows/preview-image.yml
@@ -11,7 +11,13 @@ jobs:
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "18"
+      - name: Install Vercel CLI
+        run: npm install -g vercel
       - name: Deploy to Vercel Action
         id: vercel-deploy
         uses: BetaHuhn/deploy-to-vercel-action@v1
@@ -34,10 +40,11 @@ jobs:
               </tr>
               <tr>
                 <td><strong>🔍 Inspect:</strong></td>
-                <td><a href='${ steps.vercel-deploy.outputs.DEPLOYMENT_INSPECTOR_URL }'>${ steps.vercel-deploy.outputs.DEPLOYMENT_INSPECTOR_URL }</a></td>
+                <td><a href='${{ steps.vercel-deploy.outputs.DEPLOYMENT_INSPECTOR_URL }}'>${{ steps.vercel-deploy.outputs.DEPLOYMENT_INSPECTOR_URL }}</a></td>
               </tr>
             </table>
             <img src='${{ steps.vercel-deploy.outputs.PREVIEW_URL }}/fullpage.png' alt='image'/>
 
-            [View Workflow Logs](${ LOG_URL })
-          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+            [View Workflow Logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          COMMENT_IDENTIFIER: "vercel-deploy"
