--- a/.github/workflows/preview-image.yml
+++ b/.github/workflows/preview-image.yml
@@ -1,6 +1,8 @@
 name: Comment on Pull Request
 
 on:
+  push:
+    branches: [main]
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
@@ -26,7 +28,7 @@ jobs:
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
           CREATE_COMMENT: false
       - uses: phulsechinmay/rewritable-pr-comment@v0.3.0
-        if: ${{ steps.vercel-deploy.outputs.DEPLOYMENT_CREATED }}
+        if: ${{ steps.vercel-deploy.outputs.DEPLOYMENT_CREATED && github.event_name == 'pull_request' }}
         with:
           message: |
             This pull request has been deployed to Vercel.
@@ -46,3 +48,4 @@ jobs:
             [View Workflow Logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
           COMMENT_IDENTIFIER: "vercel-deploy"
+          pr_number: ${{ github.event.pull_request.number }}
