fix: adjust AI PR reviewer workflow for better token handling and formatting

--- a/.github/workflows/ai-pr-reviewer.yml
+++ b/.github/workflows/ai-pr-reviewer.yml
@@ -10,7 +10,9 @@ on:
     types: [created]
 
 concurrency:
-  group: ${{ github.repository }}-${{ github.event.number || github.head_ref || github.sha }}-${{ github.workflow }}-${{ github.event_name == 'pull_request_review_comment' && 'pr_comment' || 'pr' }}
+  group: ${{ github.repository }}-${{ github.event.number || github.head_ref ||
+    github.sha }}-${{ github.workflow }}-${{ github.event_name ==
+    'pull_request_review_comment' && 'pr_comment' || 'pr' }}
   cancel-in-progress: ${{ github.event_name != 'pull_request_review_comment' }}
 
 jobs:
@@ -20,10 +22,10 @@ jobs:
       - name: AI Code Review
         uses: coderabbitai/ai-pr-reviewer@latest
         env:
+          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         with:
-          github-token: ${{ secrets.GIT_TOKEN }} # Explicitly pass default token
-          debug: true # Enable for troubleshooting
+          debug: false
           disable_review: false
           disable_release_notes: false
           max_files: 150
@@ -45,6 +47,7 @@ jobs:
               - Complexity
               - Optimization
               - Best practices: DRY, SOLID, KISS
+
             Do not comment on minor code style issues, missing 
             comments/documentation. Identify and resolve significant 
             concerns to improve overall code quality while deliberately 
