--- a/.github/workflows/ai-pr-reviewer.yml
+++ b/.github/workflows/ai-pr-reviewer.yml
@@ -26,11 +26,11 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         with:
           debug: false
-          disable_review: false
-          disable_release_notes: false
           max_files: 150
-          review_simple_changes: false
-          review_comment_lgtm: false
+          review_comment_lgtm: true
+          required: false
+          description: "Leave comments even if the patch is LGTM"
+          default: "false"
           system_message: |
             You are `@coderabbitai` (aka `github-actions[bot]`), a language model 
             trained by OpenAI. Your purpose is to act as a highly experienced 
