--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,5 +1,7 @@
 name: Playwright Tests
 on:
+  push:
+    branches: [main]
   pull_request:
     branches: [main]
 jobs:
@@ -26,17 +28,16 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const fs = require('fs');
-            const output = fs.readFileSync('./output.log', 'utf8');
-            const hasSnapshotError = /Error: A snapshot doesn't exist at|Screenshot comparison failed/.test(output);
-
-            if (hasSnapshotError) {
-              github.rest.issues.createComment({
-                issue_number: context.issue.number,
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                body: `Playwright tests failed. See the [Playwright report](${process.env.GITHUB_SERVER_URL}/${process.env.GITHUB_REPOSITORY}/actions/runs/${process.env.GITHUB_RUN_ID}/artifacts/1}) for details.`
-              });
+            const { data: artifacts } = await github.rest.actions.listWorkflowRunArtifacts({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              run_id: process.env.GITHUB_RUN_ID,
+            });
+            const report = artifacts.artifacts.find(a => a.name === 'playwright-report');
+            if (report) {
+              body = `Playwright tests failed. See the [Playwright report](${report.archive_download_url}) for details.`;
+            } else {
+              body = `Playwright tests failed. Playwright report artifact not found.`;
             }
       - name: Upload Playwright report
         uses: actions/upload-artifact@v4
