--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -35,7 +35,7 @@ jobs:
                 issue_number: context.issue.number,
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                body: `Playwright tests failed. See the ${process.env.GITHUB_SERVER_URL} for details.`
+                body: `Playwright tests failed. See the ${process.env.GITHUB_SERVER_URL}/${process.env.GITHUB_REPOSITORY}/actions/runs/${process.env.GITHUB_RUN_ID}/artifacts/1} for details.`
               });
 
             if (hasSnapshotError) {
