--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,7 +1,5 @@
 name: Playwright Tests
 on:
-  push:
-    branches: [main]
   pull_request:
     branches: [main]
 jobs:
@@ -24,6 +22,7 @@ jobs:
         run: |
           pnpm exec playwright test | tee output.log
       - name: Check for snapshot issues and post comment
+        if: failure() # Only run if tests fail
         uses: actions/github-script@v7
         with:
           script: |
@@ -31,15 +30,8 @@ jobs:
             const output = fs.readFileSync('./output.log', 'utf8');
             const hasSnapshotError = /Error: A snapshot doesn't exist at|Screenshot comparison failed/.test(output);
 
-            github.rest.issues.createComment({
-                issue_number: context.issue.number,
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                body: `Playwright tests failed. See the ${process.env.GITHUB_SERVER_URL}/${process.env.GITHUB_REPOSITORY}/actions/runs/${process.env.GITHUB_RUN_ID}/artifacts/1} for details.`
-              });
-
             if (hasSnapshotError) {
-            github.rest.issues.createComment({
+              github.rest.issues.createComment({
                 issue_number: context.issue.number,
                 owner: context.repo.owner,
                 repo: context.repo.repo,
