--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -22,13 +22,20 @@ jobs:
         run: |
           pnpm exec playwright test | tee output.log
       - name: Check for snapshot issues and post comment
-        if: failure() # Only run if tests fail
+        # if: failure() # Only run if tests fail
         uses: actions/github-script@v7
         with:
           script: |
             const fs = require('fs');
             const output = fs.readFileSync('./output.log', 'utf8');
             const hasSnapshotError = /Error: A snapshot doesn't exist at|Screenshot comparison failed/.test(output);
+
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `Playwright tests success. See the [Playwright report](${process.env.GITHUB_SERVER_URL}/${process.env.GITHUB_REPOSITORY}/actions/runs/${process.env.GITHUB_RUN_ID}/artifacts/1}) for details.`
+            });
 
             if (hasSnapshotError) {
               github.rest.issues.createComment({
@@ -43,5 +50,5 @@ jobs:
         if: always() # Upload even if tests fail
         with:
           name: playwright-report
-          path: test-results/
+          path: test-results/.last-run.json
           retention-days: 1
