update: change path name

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -50,5 +50,5 @@ jobs:
         if: always() # Upload even if tests fail
         with:
           name: playwright-report
-          path: test-results/.last-run.json
+          path: public/fullpage.png
           retention-days: 1
