--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
+      # Vercel
       - name: Install dependencies
         run: npm install
 
@@ -35,13 +36,23 @@ jobs:
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+
+      # Playwright
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 10
+
       - name: Install dependencies
-        run: npm install -g pnpm && pnpm install
+        run: pnpm install
+
       - name: Install Playwright Browsers
         run: pnpm exec playwright install --with-deps
+
       - name: Run Playwright tests
         run: |
           pnpm exec playwright test | tee output.log
+
       - name: Check for snapshot issues and post comment when failed
         if: failure() # Only run if tests fail
         uses: actions/github-script@v7
