--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,11 +15,14 @@ jobs:
         with:
           node-version: lts/*
       # Vercel
+      - name: Install pnpm
+        run: npm install -g pnpm@10
+
       - name: Install dependencies
-        run: npm install
+        run: pnpm install
 
       - name: Install Vercel CLI
-        run: npm install -g vercel
+        run: npm install -g vercel@44.4.1
 
       - name: Pull Vercel environment
         run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
@@ -29,10 +32,13 @@ jobs:
 
       - name: Build project
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
+        env:
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
       - name: Deploy to Vercel
         id: deploy
-        run: echo "url=$(vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }})" >> $GITHUB_OUTPUT
+        run: echo "url=$(vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }))" >> $GITHUB_OUTPUT
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
