--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -14,51 +14,13 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
-      # Vercel
-      - name: Install pnpm
-        run: npm install -g pnpm@10
-
       - name: Install dependencies
-        run: pnpm install
-
-      - name: Install Vercel CLI
-        run: npm install -g vercel@44.4.1
-
-      - name: Pull Vercel environment
-        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
-        env:
-          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-
-      - name: Build project
-        run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
-        env:
-          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-
-      - name: Deploy to Vercel
-        id: deploy
-        run: echo "url=$(vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }))" >> $GITHUB_OUTPUT
-        env:
-          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-
-      # Playwright
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 10
-
-      - name: Install dependencies
-        run: pnpm install
-
+        run: npm install -g pnpm && pnpm install
       - name: Install Playwright Browsers
         run: pnpm exec playwright install --with-deps
-
       - name: Run Playwright tests
         run: |
           pnpm exec playwright test | tee output.log
-
       - name: Check for snapshot issues and post comment when failed
         if: failure() # Only run if tests fail
         uses: actions/github-script@v7
@@ -84,7 +46,7 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `${{ steps.deploy.outputs.url }}`
+              body: ``
             });
       - name: Upload Playwright report
         uses: actions/upload-artifact@v4
