feat: include image URL in Playwright workflow comment for better preview context

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -44,12 +44,13 @@ jobs:
             const fs = require('fs');
             const output = fs.readFileSync('./output.log', 'utf8');
             const hasSnapshotError = /Error: A snapshot doesn't exist at|Screenshot comparison failed/.test(output);
+            const imageUrl = require('./public/fullpage.png')
 
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `Preview URL for branch **${{ github.head_ref }}**: ${{ steps.deploy.outputs.url }}`
+              body: `Preview URL for branch **${{ github.head_ref }}**: ${{ steps.deploy.outputs.url }} ${imageUrl.src}`
             })
 
             if (hasSnapshotError) {
