--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -42,15 +42,25 @@ jobs:
         with:
           script: |
             const fs = require('fs');
+            const path = require('path');
             const output = fs.readFileSync('./output.log', 'utf8');
             const hasSnapshotError = /Error: A snapshot doesn't exist at|Screenshot comparison failed/.test(output);
-            const imageUrl = require('../../public/fullpage.png')
+
+            // Check if the image exists in the public folder
+            const imagePath = path.join(process.cwd(), 'public/fullpage.png');
+            let imageContent = '';
+
+            if (fs.existsSync(imagePath)) {
+              // Convert image to base64 for embedding in GitHub comment
+              const imageBuffer = fs.readFileSync(imagePath);
+              imageContent = `\n\n![Screenshot](data:image/png;base64,${imageBuffer.toString('base64')})`;
+            }
 
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `Preview URL for branch **${{ github.head_ref }}**: ${{ steps.deploy.outputs.url }} ${imageUrl.src}`
+              body: `Preview URL for branch **${{ github.head_ref }}**: ${{ steps.deploy.outputs.url }}${imageContent}`
             })
 
             if (hasSnapshotError) {
